removed outdated preview code