@@ -55,13 +55,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.12.1</version>
-        <configuration>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
-          <source>21</source>
-          <target>21</target>
-        </configuration>
+
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
